Fix z-index issues

--- a/app/styles/block.css
+++ b/app/styles/block.css
@@ -267,6 +267,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1;
 }
 
 .player__captain {
@@ -408,4 +409,5 @@
   color: var(--color-secondary);
   background-color: var(--background-color-buttons--hover);
   border-bottom-right-radius: 4px;
+  z-index: 2;
 }
